--- a/src/components/BoostLinks/boostLinks.css
+++ b/src/components/BoostLinks/boostLinks.css
@@ -19,12 +19,12 @@ margin-bottom: 1.5rem;
 
 @media screen and (max-width:700px){
   .BoostLinks h2{
-    font-size: 2rem;
+    font-size: 1.8rem;
     margin-bottom: 1.5rem;
     }
     .BoostLinks .btn{
-      width: 180px;
-      height: 50px;
+      width: 160px;
+      height: 40px;
       border-radius: 30px;
     } 
 }
