--- a/src/components/Shortner/shortner.css
+++ b/src/components/Shortner/shortner.css
@@ -49,6 +49,7 @@ background-color: var(--Dark-Violet);
 .container input{
   height: 40px;
   margin: 0;
+  width: 80%;
 }
 }
 
@@ -57,6 +58,6 @@ background-color: var(--Dark-Violet);
     width: 85%;
   }
 .container input{
-  width: 70%;
+  width: 80%;
 }
 }
